Minor fixes on element spacing

--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -238,6 +238,10 @@ label {
   color: rgba(255, 255, 255, 0.75);
 }
 
+input[type='text'] {
+  padding-inline: 8px;
+}
+
 input:not([type='submit']) {
   border-radius: 4px;
   border: none;
